# vpic-api

./: 404.html  CHANGES.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  client.html  exceptions.html  index.html  mkdocs.yml  models.html  pyproject.toml  tox.ini  typed_client.html  vpic-api.code-workspace
.github/workflows/: ci.yaml  docs.yaml  main.yml  release.yml
docs/: client-base.md  client.md  exceptions.md  index.md  models.md  session.md  typed_client.md
examples/: get-response-variable-names.py  jeep.json  jeep.py
search/: search_index.json
tests/: __init__.py  capture_responses.py  conftest.py  test_client.py  test_decode.py  test_exceptions.py  test_makes.py  test_manufacturers.py  test_models.py  test_parts.py  test_session.py  test_variables.py  test_version.py
tests/test_decode/: decode-partial-vin-unflattened.json  decode-partial-vin.json  decode-vin-batch.json  decode-vin-extended.json  decode-vin-unflattened.json  decode-vin-with-modelyear.json  decode-vin.json  decode-wmi.json
tests/test_makes/: get-all-makes.json  get-makes-for-manufacturer-name.json  get-makes-for-manufacturer-partial-name.json  get-makes-for-manufacturer.json  get-makes-for-manufacturerid-and-modelyear.json  get-makes-for-vehicletype.json  get-vehicletypes-for-makeid.json  get-vehicletypes-for-makename.json
tests/test_manufacturers/: get-all-manufacturers.json  get-equipment-plant-codes.json  get-manufacturer-details-name.json  get-manufacturer-details-partialname.json  get-manufacturer-details.json  get-parts-565.json  get-parts-566.json  get-wmis-for-manufacturer-name.json  get-wmis-for-manufacturer-partialname.json  get-wmis-for-manufacturer-vehicletype.json  get-wmis-for-manufacturerid.json
tests/test_models/: get-canadian-vehicle-specifications.json  get-models-for-make-vehicletype.json  get-models-for-make-year-vehicletype.json  get-models-for-make-year.json  get-models-for-make.json  get-models-for-makeid-vehicletype.json  get-models-for-makeid-year-vehicletype.json  get-models-for-makeid-year.json  get-models-for-makeid.json
tests/test_parts/: get-parts-565.json  get-parts-566.json
tests/test_variables/: get-vehicle-variable-list.json  get-vehicle-variable-values-list.json
tests/typed_client/: conftest.py  test_decode.py  test_live.py  test_makes.py  test_manufacturers.py  test_models.py  test_variables.py
vpic/: __init__.py  client.py  client_base.py  exceptions.py  model.py  models.py  session.py  transforms.py  typed_client.py  utils.py
