[tool.poetry]
name = "vpic-api"
version = "0.6.3"
description = "A client library for the United States National Highway Traffic Safety Administration (NHTSA) Vehicle Product Information Catalog (vPIC) API"
authors = ["David Peckham <dave.peckham@icloud.com>"]
license = "MIT"

readme = "README.md"

packages = [
    { include = "vpic" },
]

include = [
    { path = "tests", format = "sdist" }
]

documentation = "https://davidpeckham.github.io/vpic-api/"

repository = "https://github.com/davidpeckham/vpic-api"

keywords = [
    "vpic",
    "nhtsa",
    "vin",
    "vehicle",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
desert = "^2020.11.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-datadir = "^1.3.1"
black = {version = "^21.4b0", allow-prereleases = true}
flake8 = "^3.9.1"
mypy = "^0.812"
responses = "^0.13.3"
mkdocs-material = "^7.1.4"
mkdocstrings = "^0.15.0"
tox = "^3.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"