[tool.poetry]
name = "vpic-api"
version = "0.7.5"
description = "A client library for the United States National Highway Traffic Safety Administration (NHTSA) Vehicle Product Information Catalog (vPIC) API"
authors = ["David Peckham <dave.peckham@icloud.com>"]
license = "MIT"

readme = "README.md"

packages = [
    { include = "vpic" },
]

include = [
    { path = "tests", format = "sdist" }
]

documentation = "https://davidpeckham.github.io/vpic-api/"

repository = "https://github.com/davidpeckham/vpic-api"

keywords = [
    "vpic",
    "nhtsa",
    "vin",
    "vehicle",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.29"
desert = "^2022.9.22"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-datadir = "^1.3.1"
black = {version = "^24.1"}
flake8 = "^7.0.0"
mypy = "^1.8"
responses = "^0.23"
mkdocs-material = "^7.1.4"
mkdocstrings = "^0.15.0"
tox = "^3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"